<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputNewPin"
        android:layout_width="296dp"
        android:layout_height="91dp"
        android:ems="10"
        android:hint="@string/inputNewPin"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewCreatePin2"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:id="@+id/tViewCreatePin2"
        android:layout_width="357dp"
        android:layout_height="123dp"
        android:text="@string/tViewCreatePin2"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/btnSaveNewPin"
        android:layout_width="199dp"
        android:layout_height="73dp"
        android:text="@string/btnSaveNewPin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNewPin"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/btnReturnToPin"
        android:layout_width="218dp"
        android:layout_height="77dp"
        android:text="@string/btnReturnToPin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveNewPin"
        app:layout_constraintVertical_bias="0.266" />
</androidx.constraintlayout.widget.ConstraintLayout>